--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "license": "MIT",
   "private": false,
   "scripts": {
+    "prestart": "yarn run build",
+    "start": "electron ./dist/main.js",
     "build": "webpack --mode development --config webpack.config.js"
   },
   "devDependencies": {
@@ -14,7 +16,10 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-typescript": "^7.7.2",
+    "@types/node": "^12.12.7",
     "babel-loader": "^8.0.6",
+    "electron": "^7.1.1",
+    "html-webpack-plugin": "^3.2.0",
     "standard": "^14.3.1",
     "standard-loader": "^7.0.0",
     "tslint": "^5.20.1",
