--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^3.0.0",
     "electron": "^7.1.1",
+    "electron-is-dev": "^1.1.0",
     "node-loader": "^0.6.0",
     "standard": "^14.3.1",
     "standard-loader": "^7.0.0",
