--- a/package.json
+++ b/package.json
@@ -87,9 +87,11 @@
     "electron": "^7.1.1",
     "electron-is-dev": "^1.1.0",
     "node-loader": "^0.6.0",
+    "postcss-loader": "^3.0.0",
     "standard": "^14.3.1",
     "standard-loader": "^7.0.0",
     "style-loader": "^0.23.1",
+    "tailwindcss": "^1.1.3",
     "ts-loader": "^6.2.1",
     "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
