--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electron-typescript-webpack-template",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Electron based on Webpack with Typescript support",
   "author": "Flo Schuessel <fs@iprods.org>",
   "license": "MIT",
@@ -17,9 +17,9 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "tslint --project tsconfig.json 'src/**/*.ts'"
+    "lint": "tslint -c tslint.json -p tsconfig.json"
   },
-  "main": "./build/main.js",
+  "main": ".webpack/main",
   "config": {
     "forge": {
       "packagerConfig": {},
@@ -69,23 +69,17 @@
     "electron-squirrel-startup": "^1.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.4",
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.7.4",
-    "@babel/preset-env": "^7.7.4",
-    "@babel/preset-typescript": "^7.7.4",
-    "@electron-forge/cli": "6.0.0-beta.45",
-    "@electron-forge/maker-deb": "6.0.0-beta.45",
-    "@electron-forge/maker-rpm": "6.0.0-beta.45",
-    "@electron-forge/maker-squirrel": "6.0.0-beta.45",
-    "@electron-forge/maker-zip": "6.0.0-beta.45",
-    "@electron-forge/plugin-webpack": "6.0.0-beta.45",
+    "@electron-forge/cli": "6.0.0-beta.47",
+    "@electron-forge/maker-deb": "6.0.0-beta.47",
+    "@electron-forge/maker-rpm": "6.0.0-beta.47",
+    "@electron-forge/maker-squirrel": "6.0.0-beta.47",
+    "@electron-forge/maker-zip": "6.0.0-beta.47",
+    "@electron-forge/plugin-webpack": "6.0.0-beta.47",
     "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
-    "@types/node": "^12.12.14",
-    "babel-loader": "^8.0.6",
     "css-loader": "^3.0.0",
     "electron": "^7.1.2",
     "electron-is-dev": "^1.1.0",
+    "fork-ts-checker-webpack-plugin": "^3.1.1",
     "node-loader": "^0.6.0",
     "postcss-loader": "^3.0.0",
     "standard": "^14.3.1",
@@ -96,7 +90,6 @@
     "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^9.0.0",
-    "tslint-loader": "^3.5.4",
     "typescript": "^3.7.2",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
