--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "tslint -c tslint.json -p tsconfig.json"
+    "lint": "eslint . --ext .ts,.tsx"
   },
   "main": ".webpack/main",
   "config": {
@@ -76,9 +76,12 @@
     "@electron-forge/maker-zip": "6.0.0-beta.47",
     "@electron-forge/plugin-webpack": "6.0.0-beta.47",
     "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
+    "@typescript-eslint/eslint-plugin": "^2.16.0",
+    "@typescript-eslint/parser": "^2.16.0",
     "css-loader": "^3.0.0",
     "electron": "^7.1.2",
     "electron-is-dev": "^1.1.0",
+    "eslint": "^6.8.0",
     "fork-ts-checker-webpack-plugin": "^3.1.1",
     "node-loader": "^0.6.0",
     "postcss-loader": "^3.0.0",
