--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,11 +17,11 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: GitHub Action for Yarn
+    - name: Install
       uses: Borales/actions-yarn@v2.1.0
       with:
-        cmd: |
-          yarn install
-          yarn lint
-      env:
-        CI: true
+        cmd: install
+    - name: Lint
+      uses: Borales/actions-yarn@v2.1.0
+      with:
+        cmd: lint
