--- a/package.json
+++ b/package.json
@@ -1,24 +1,21 @@
 {
-  "name": "electron-typescript-webpack-template",
+  "name": "electron-ts-webpack",
+  "productName": "electron-ts-webpack",
   "version": "0.3.0-dev",
-  "description": "Electron based on Webpack with Typescript support",
-  "author": "Flo Schuessel <fs@iprods.org>",
-  "license": "MIT",
-  "private": false,
-  "maintainers": [
-    {
-      "name": "Flo Schuessel",
-      "email": "fs@iprods.org",
-      "url": "https://github.com/scflode"
-    }
-  ],
+  "description": "My Electron application description",
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "eslint . --ext .ts,.tsx"
+    "lint": "eslint --ext .ts ."
   },
+  "keywords": [],
+  "author": {
+    "name": "Flo Schuessel",
+    "email": "mail@florian-schuessel.de"
+  },
+  "license": "MIT",
   "main": ".webpack/main",
   "config": {
     "forge": {
@@ -27,7 +24,7 @@
         {
           "name": "@electron-forge/maker-squirrel",
           "config": {
-            "name": "electron_forge_webpack"
+            "name": "electron_ts_webpack"
           }
         },
         {
@@ -65,36 +62,32 @@
       ]
     }
   },
+  "devDependencies": {
+    "@electron-forge/cli": "^6.0.0-beta.54",
+    "@electron-forge/maker-deb": "^6.0.0-beta.54",
+    "@electron-forge/maker-rpm": "^6.0.0-beta.54",
+    "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
+    "@electron-forge/maker-zip": "^6.0.0-beta.54",
+    "@electron-forge/plugin-webpack": "6.0.0-beta.54",
+    "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
+    "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "@typescript-eslint/parser": "^4.0.1",
+    "autoprefixer": "^10.0.4",
+    "css-loader": "^4.3.0",
+    "electron": "^11.0.3",
+    "electron-is-dev": "^1.2.0",
+    "eslint": "^7.6.0",
+    "eslint-plugin-import": "^2.20.0",
+    "fork-ts-checker-webpack-plugin": "^5.0.14",
+    "node-loader": "^1.0.1",
+    "postcss": "^8.1.10",
+    "postcss-loader": "^4.1.0",
+    "style-loader": "^1.3.0",
+    "tailwindcss": "^2.0.1",
+    "ts-loader": "^8.0.2",
+    "typescript": "^4.0.2"
+  },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0"
-  },
-  "devDependencies": {
-    "@electron-forge/cli": "6.0.0-beta.47",
-    "@electron-forge/maker-deb": "6.0.0-beta.47",
-    "@electron-forge/maker-rpm": "6.0.0-beta.47",
-    "@electron-forge/maker-squirrel": "6.0.0-beta.47",
-    "@electron-forge/maker-zip": "6.0.0-beta.47",
-    "@electron-forge/plugin-webpack": "6.0.0-beta.47",
-    "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
-    "@typescript-eslint/eslint-plugin": "^2.16.0",
-    "@typescript-eslint/parser": "^2.16.0",
-    "css-loader": "^3.0.0",
-    "electron": "^7.1.2",
-    "electron-is-dev": "^1.1.0",
-    "eslint": "^6.8.0",
-    "fork-ts-checker-webpack-plugin": "^3.1.1",
-    "node-loader": "^0.6.0",
-    "postcss-loader": "^3.0.0",
-    "standard": "^14.3.1",
-    "standard-loader": "^7.0.0",
-    "style-loader": "^1.0.0",
-    "tailwindcss": "^1.1.4",
-    "ts-loader": "^6.2.1",
-    "tslint": "^5.20.1",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-config-standard": "^9.0.0",
-    "typescript": "^3.7.2",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10"
   }
 }
