--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Node CI
+name: Node
 
 on: [push]
 
@@ -17,11 +17,5 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: Install
-      uses: Borales/actions-yarn@v2.1.0
-      with:
-        cmd: install
-    - name: Lint
-      uses: Borales/actions-yarn@v2.1.0
-      with:
-        cmd: lint
+      run: npm install
+      run: npm lint
