--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,11 +16,4 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - name: Install
-        uses: Borales/actions-yarn@v2.1.0
-        with:
-          cmd: install
-      - name: Lint
-        uses: Borales/actions-yarn@v2.1.0
-        with:
-          cmd: lint
+        run: npm install
