--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ jobs:
       - uses: actions/checkout@v1
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
-        run: npm install
         with:
           node-version: ${{ matrix.node-version }}
+      - name: Install dependencies
+        run: npm install
